# Vision-Agents

./: CHANGELOG.md  pyproject.toml
agents-core/: pyproject.toml
agents-core/vision_agents/core/agents/: agents.py
plugins/anam/: pyproject.toml
plugins/anam/vision_agents/plugins/anam/: anam_avatar.py
plugins/getstream/: pyproject.toml
plugins/kokoro/: README.md
plugins/kokoro/example/: README.md  kokoro_example.py
plugins/kokoro/tests/: test_tts.py
plugins/kokoro/vision_agents/plugins/kokoro/: tts.py
plugins/lemonslice/vision_agents/plugins/lemonslice/: lemonslice_rtc_manager.py
plugins/liveavatar/vision_agents/plugins/liveavatar/: liveavatar_websocket.py
plugins/local/tests/: test_tracks.py
plugins/local/vision_agents/plugins/local/: tracks.py
plugins/pocket/: README.md
plugins/pocket/example/: pyproject.toml
plugins/speechify/: README.md  pyproject.toml
plugins/speechify/example/: .env.example  README.md  main.py  pyproject.toml  tts_smoke.py
plugins/speechify/tests/: test_tts.py
plugins/speechify/vision_agents/plugins/speechify/: tts.py
plugins/tencent/tests/: test_tracks.py
plugins/tencent/vision_agents/plugins/tencent/: tracks.py
plugins/twelvelabs/tests/: test_pegasus_vlm.py
plugins/twelvelabs/vision_agents/plugins/twelvelabs/: pegasus_vlm.py
tests/test_agents/: test_agents.py
